# ARCANE

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  =4.2.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Phase1specsheet.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  checklist.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  swagger.yaml  tailwind.config.js  tsconfig.json
backend/: Dockerfile  README.md  __init__.py  app.py  config.py  forms.py  manage.py  pyproject.toml  requirements.txt  routes.py  setup.py  wsgi.py
backend/ai_services/: flux_service.py  gemini.py  gemini_service.py  prompts.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  campaign_routes.py  encounter_routes.py  npc_routes.py
backend/app/: urls.py
backend/app/ai_services/: flux.py  flux_service.py  gemini.py  gemini_service.py  interface.py
backend/app/api/: serializers.py  views.py
backend/app/models/: npc.py
backend/app/utils/: dnd_api_client.py
backend/arcane_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/models/: campaign.py  encounter.py  npc.py
backend/tests/: conftest.py  manual_test.py  test_dnd_api_integration.py  test_flux_client.py  test_logging.py  test_prompts.py
backend/tests/api/: test_campaign_api.py  test_encounter_api.py  test_npc_api.py
backend/tests/integration/: test_api.py  test_dnd_api_integration.py  test_gemini_api.py
backend/tests/unit/: test_models.py  test_utils.py
backend/utils/: db.py  dnd_api_client.py  errors.py  json_encoder.py
(+137 files in other folders)
