[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcane-backend"
version = "0.1"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "Backend for the ARCANE D&D NPC Management System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-pymongo",
    "python-dotenv",
    "pytest",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
